# llvm-project

clang-tools-extra/: CMakeLists.txt
clang-tools-extra/mlir-member-cast-rewriter/: CMakeLists.txt  mlir-member-cast-rewriter.cpp
mlir/include/mlir/Dialect/Arithmetic/IR/: ArithmeticOps.td
mlir/lib/Dialect/Arithmetic/IR/: ArithmeticOps.cpp
mlir/lib/Dialect/Arithmetic/Transforms/: ExpandOps.cpp
mlir/lib/Dialect/StandardOps/Transforms/: ExpandOps.cpp
mlir/lib/Dialect/Tosa/IR/: TosaOps.cpp
mlir/test/Dialect/Arithmetic/: expand-ops.mlir
mlir/test/Integration/Dialect/Standard/CPU/: test-ceil-floor-pos-neg.mlir
mlir/test/Transforms/: canonicalize.mlir  constant-fold.mlir
